giaan- update full